fix[storybook]: Prevent the header slider from being cut behind the header slider controls Card: https://app.clickup.com/t/34afhu1

--- a/src/styles/globals/_header-content.css
+++ b/src/styles/globals/_header-content.css
@@ -155,4 +155,12 @@
     .header[header-type="slider"] .header-content[content-size="full"] {
         --header-content-width: calc(100% - calc(var(--spacing-xxxl) * 3));
     }
+
+    .header[header-type="slider"] .header-content[horizontal-position="left"] {
+        --header-content-left: calc(var(--spacing-xxxl) + var(--spacing-normal));
+    }
+
+    .header[header-type="slider"] .header-content[horizontal-position="right"] {
+        --header-content-right: calc(var(--spacing-xxxl) + var(--spacing-normal));
+    }
 }
